[package]
name = "brrrr"
version = "0.7.2"
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2018"

[[bin]]
name = "brrrr"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = { git = "https://github.com/rust-bio/rust-bio" }
clap = "3.0.0-beta.2"
clap_generate = { version = "3.0.0-beta.2" }

[dev-dependencies]
assert_cmd = "1.0.1"
criterion = "0.3"

[[bench]]
name = "read_fasta"
harness = false
