[package]
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2018"
name = "brrrr-lib"
version = "0.11.0"
description = "About Tools to process biological sequences and annotations to modern file formats."
license = "MIT"
readme = "../README.md"
repository = "http://www.github.com/tshauck/brrrr"

[dependencies]
bio = "0.41"
itertools = "0.10"
parquet = "17.0"
arrow = "17.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "read_fasta"

[[example]]
name = "hello_world_parquet"
path = "examples/fa2jsonl.rs"
