[package]
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2018"
name = "brrrr-lib"
version = "0.14.0"
description = "About Tools to process biological sequences and annotations to modern file formats."
license = "MIT"
readme = "../README.md"
repository = "http://www.github.com/tshauck/brrrr"

[dependencies]
itertools = "0.10"
parquet = "15.0"
arrow = "15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.1"
noodles = {version = "0.25.0", features = ["core", "fastq", "fasta", "bgzf", "gff"]}
flate2 = "1.0.24"
thiserror = "1.0.24"

[dev-dependencies]
criterion = {version="0.3", features = ["html_reports"]}

[[bench]]
harness = false
name = "read_fasta"

[[example]]
name = "hello_world_parquet"
path = "examples/fa2jsonl.rs"
