[package]
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2018"
name = "brrrr"
version = "0.9.7"

[[bin]]
name = "brrrr"
path = "src/main.rs"

[dependencies]
brrrr-lib = {path = "../brrrr-lib"}
clap = "3.0.0-beta.4"
clap_generate = {version = "3.0.0-beta.4"}
bio = "0.37.1"

[dev-dependencies]
assert_cmd = "1.0.1"
