[package]
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2021"
name = "brrrr"
version = "0.12.0"

[[bin]]
name = "brrrr"
path = "src/main.rs"

[dependencies]
brrrr-lib = {path = "../brrrr-lib"}
bio = "0.41"
clap = {version = "3.2", features = ["derive"]}

[dev-dependencies]
assert_cmd = "1.0.1"
