[package]
authors = ["Trent Hauck <trent@trenthauck.com>"]
edition = "2021"
name = "brrrr"
version = "0.13.0"

[[bin]]
name = "brrrr"
path = "src/main.rs"

[dependencies]
brrrr-lib = {path = "../brrrr-lib"}
clap = {version = "3.2", features = ["derive"]}
parquet = "15.0"
arrow = "15.0"

[dev-dependencies]
assert_cmd = "1.0.1"
